# auv_control_model

./: .gitignore  README.md  environment.yml  train.ipynb
data/: check_data.py  create_input.py  data.h5  merge_data.py
model/src/: main.cpp
pretrained/: export_scalers.py  fossen_net_scripted.pt
pretrained/fossen_net_0/: scalers.json
test/: CMakeLists.txt  build_  fossen_net_scripted.pt  input.txt
test/include/: model_inference.h  utils.h
test/src/: main.cpp  model_inference.cpp  utils.cpp
